[package]
name = "day_15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
lazy_static = "1"
rayon = "1"

[build-dependencies]
lalrpop = "0.19.7"
